Fix switch dark mode layout

--- a/src/sass/_bootstrap-variables.scss
+++ b/src/sass/_bootstrap-variables.scss
@@ -426,6 +426,7 @@ $input-line-height-lg:                  $input-btn-line-height-lg !default;
 
 $input-bg:                              $white !default;
 $input-disabled-bg:                     $gray-200 !default;
+$input-disabled-color:                  $gray-600 !default;
 
 $input-color:                           $gray-700 !default;
 $input-border-color:                    $border-color !default;
